<resources>
    <string name="app_name">InterGroup</string>
    <string name="application_logo">Application Logo</string>
    <string name="notification_channel_id">notification_chanel_intergroup</string>
    <string name="inter_group">Inter Group</string>
    <string name="registration">Registration</string>
    <string name="enter">Login</string>
    <string name="lost_connection">Internet disappeared</string>
    <string name="unknown_error">Unknown error</string>
    <string name="men"> \t\tMen</string>
    <string name="women">\t\tWomen</string>
    <string name="from_gallery">Gallery</string>
    <string name="from_camera">Camera</string>
    <string name="server_error">Server error</string>
    <string name="no_network_connection">No internet connection</string>
    <string name="password_minimum_eight_symbols">Password must be at least 8 characters including a number and letter</string>
    <string name="email_not_valid">Email does not exist</string>
    <string name="next">Continue</string>
    <string name="read_phone_state_permission">This app requires access to a phone</string>
    <string name="ok">OK</string>
    <string name="field_should_not_be_empty">Field can not be empty</string>
    <string name="group_name">Group name</string>
    <string name="create_group">Create group</string>
    <string name="join_the_group">Join the group</string>
    <string name="create_post">Create a post</string>
    <string name="members" formatted="true"> %1$s members</string>
    <string name="member" formatted="true">%1$s member</string>
    <string name="here_no_posts_yet">There are no posts yet</string>
    <string name="post_on_the_wall">Post on the wall</string>
    <string name="write_your_comment">Leave your comment</string>
    <string name="comment_response">Response</string>
    <string name="response_to" formatted="true">response %1$s</string>
    <string name="id" formatted="true">ID %1$s</string>
    <string name="create_note">Create note</string>
    <string name="post_should_contains_text">You can not create post without content</string>
    <string name="go_out_from_group">Leave group</string>
    <string name="no_comments_yet">There are no comments yet</string>
    <string name="comment_should_contain_text">Comment cannot be empty</string>
    <string name="intergroup_notification">Notification from InterGroup</string>
    <string name="here_no_groups_yet">There are no groups yet</string>
    <string name="here_no_users_yet">There are no users yet</string>
    <string name="user_blocked">User blocked</string>
    <string name="loading_error">Loading error</string>
    <string name="retry">Retry</string>
    <string name="response_to_comment">Response to a comment</string>
    <string name="news">News</string>
    <string name="groups">Groups</string>
    <string name="logout">Logout</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="error">Error</string>
    <string name="advertising">Advertisement</string>
    <string name="cancel">Cancel</string>
    <string name="image_still_uploading">Media is still uploading</string>
    <string name="can_not_change_avatar">You can not add the picture</string>
    <string name="add_photo_or_text">Type the text (enter the text or attach photo)</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_user">Unknown user</string>
    <string name="intergroup">InterGroup</string>
    <string name="welcome">Welcome!\nOur social network allows to chat, listen to music, read news, view photos and create groups by interests.</string>
    <string name="privacy_police"><u>Privacy policy</u></string>
    <string name="terms_accept">Accept conditions\t\t\t</string>
    <string name="terms_of_use"><u>User agreement</u></string>
    <string name="rightholders"><u>To copyright owners</u></string>
    <string name="hardware_access">Provide access to soft hardware</string>
    <string name="already_registered">I am authorized user InterGroup</string>
    <string name="your_email">E-mail</string>
    <string name="your_pswd">Password</string>
    <string name="your_double_email">Please re-enter E-mail</string>
    <string name="your_password">Password</string>
    <string name="your_double_password">Please confirm password</string>
    <string name="send_code">Send confirmation code to the E-mail</string>
    <string name="repeat_code">Please resend confirmation code</string>
    <string name="your_code">Please enter confirmation code</string>
    <string name="spam">If you did not receive code,\nplease check spam folder</string>
    <string name="add_photo">Add your logo image</string>
    <string name="your_name">First name</string>
    <string name="your_surname">Last Name</string>
    <string name="your_berthday">Date of Birth</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="gggg">yy</string>
    <string name="your_gender">Sex</string>
    <string name="save_settings">Save settings</string>
    <string name="editor_profile">Profile Editor</string>
    <string name="description_email_part_1">Confirmation  code was sent to E-mail</string>
    <string name="description_email_part_2">For confirmation of Your E-mail please enter \n confirmation code to the white field below</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="autorization">Authorization</string>
    <string name="repeat_passwd">Forgot password? Send to the E-mail</string>
    <string name="email_not_meeting">The repeat E-mail you typed does not match</string>
    <string name="password_not_meeting">The repeat password you typed does not match</string>
    <string name="send_code_on_email">Code sent to your E-mail </string>
    <string name="settings_password">Password settings</string>
    <string name="save_password">Password saved</string>
    <string name="complaint">Report abuse</string>
    <string name="complaint_send">Your complaint was sent</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="search">Search</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="allGroups">All groups</string>
    <string name="subGroups">Subscribed</string>
    <string name="admGroups">Management</string>
    <string name="terms_accept_privacy">Accept privacy policy conditions\t \t\t</string>
    <string name="terms_accept_agreement">Accept user agreement conditions\t \t\t</string>
    <string name="reputation">Reputation</string>
    <string-array name="countries">
        <item>Abkhazia</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
    </string-array>
    <string name="question" translatable="false">\?</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="language">Language</string>
    <string name="subject">Subject</string>
    <string name="create_group_agreement"><u>I agree with terms</u></string>
    <string name="group_rules">Rules of the group</string>
    <string name="group_description">Description</string>
    <string name="group_open">Opened</string>
    <string name="group_close">Closed</string>
    <string name="group_age">Age</string>
    <string name="group_avatar_add">Add avatar</string>
    <string name="empty_subject_error">Please enter the keyword!</string>
    <string name="full_subject_error">There are can be not more then 5 subjects</string>
    <string name="separateline" translatable="false">SeparateLine</string>
    <string name="imagebg" translatable="false">ImageBG</string>
    <string name="_18" translatable="false">18+</string>
    <string name="_12" translatable="false">12+</string>
    <string name="_16" translatable="false">16+</string>
    <string name="appodealpolicy">Appodeal policy</string>
    <string name="offered_posts">Offered posts</string>
    <string name="idg" translatable="false">IDG: %1$s</string>
    <string name="idc" translatable="false">IDC: %1$s</string>
    <string name="idp" translatable="false">IDP: %1$s</string>
    <string name="allUsers">Followers</string>
    <string name="blockedUsers">Blocked</string>
    <string name="admUsers">Administrators</string>
    <string name="can_not_upload_video">Can not upload video</string>
    <string name="can_not_upload_audio">Can not upload audio</string>
    <string name="buy_premium">Buy premium</string>
    <string name="reply">Reply</string>
    <string name="expand">Expand</string>
    <string name="publish">Publish</string>
    <string name="hide">Hide</string>
    <string name="my_music">My music</string>
    <string name="music">Music</string>
    <string name="delete">Delete</string>
    <string name="reply_to">Reply to IDC: %1$s</string>
    <string name="forbidden_error">You have no access</string>
    <string name="comments_count" translatable="false">%1$s / %2$s</string>
    <string name="post_pinned">Pinned</string>
    <string name="post_unpinned">Unpinned</string>
    <string name="followers">Followers</string>
    <string name="blocked">Blocked</string>
    <string name="administrators">Administrators</string>
    <string-array name="listOfActionFromAll">
        <item>To administrators</item>
        <item>To black list</item>
    </string-array>
    <string-array name="listOfActionFromAdministrators">
        <item>Demote</item>
        <item>To black list</item>
    </string-array>
    <string name="toBlackList">To black list</string>
    <string name="demote">Demote</string>
    <string name="unblock">Unblock</string>
    <string name="edit_post">Edit</string>
    <string name="deeplinkDomain" translatable="false">https://intergroupapplication.page.link</string>
    <string name="nickname">Come up with a nickname</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="family_status">Family status</string>
    <string name="publications">Publications</string>
    <string name="ultimate_all_inclusive">Ultimate - all inclusive</string>
    <string name="without_advertising">Advertising blocks in the application will be disabled, you can install an animated avatar, write anonymous comments and offer anonymous posts, download audio and video files.</string>
    <string name="user_advertising_can_not_disable">* Ads posted by users cannot be disabled / removed. Users will still be able to add you to the blacklist.</string>
    <string name="disabled_all_advertising">Disable all ad units in the app</string>
    <string name="you_subscribe">You are subscribed</string>
    <string name="user_advertising_can_not_disable_or_delete">* Ads posted by users cannot be disabled / removed</string>
    <string name="anim_profile_avatar">Animated profile avatar</string>
    <string name="you_can_make_anim_avatar">You can install an animated Avatar (GIF) on your profile</string>
    <string name="anonymous_comments_and_posts">Anonymous comments and suggested posts</string>
    <string name="you_can_write_anonymous_comments">You will be able to write comments anonymously and offer anonymous posts for publication in groups</string>
    <string name="user_can_still_add_to_black_list">* Users will still be able to add you to the blacklist</string>
    <string name="download_audio_and_video">Downloading audio and video files</string>
    <string name="you_can_download_files">You can download any file from your playlist, publications or comments of other users and groups</string>
</resources>