<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createGroupCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBlack"
            android:paddingBottom="16dp"
            tools:ignore="RtlHardcoded">

            <include
                android:id="@+id/navigationToolbar"
                layout="@layout/layout_create_group_toolbar" />

            <LinearLayout
                android:id="@+id/premiumOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:background="@drawable/bg_colorinput_radius_4dp"
                android:orientation="vertical"
                android:padding="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@+id/navigationToolbar">

                <TextView
                    android:id="@+id/titlePremium"
                    style="@style/TextAccent18spBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ultimate_all_inclusive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textPremium"
                    style="@style/TextLight12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/without_advertising" />

                <TextView
                    android:id="@+id/helpPremium"
                    style="@style/TextHelp10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/user_advertising_can_not_disable" />

                <Button
                    android:id="@+id/subPremium"
                    style="@style/TextDark16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/btn_main_act"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/subscribe"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/premiumOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:background="@drawable/bg_colorinput_radius_4dp"
                android:orientation="vertical"
                android:padding="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@+id/premiumOption1">

                <TextView
                    android:id="@+id/titlePremium2"
                    style="@style/TextAccent18spBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled_all_advertising"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textPremium2"
                    style="@style/TextLight12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/without_advertising"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/helpPremium2"
                    style="@style/TextHelp10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/user_advertising_can_not_disable_or_delete" />

                <Button
                    android:id="@+id/subPremium2"
                    style="@style/TextDark16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/btn_main_green"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/you_subscribe"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/premiumOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:background="@drawable/bg_colorinput_radius_4dp"
                android:orientation="vertical"
                android:padding="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@+id/premiumOption2">

                <TextView
                    android:id="@+id/titlePremium3"
                    style="@style/TextAccent18spBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anim_profile_avatar" />

                <TextView
                    android:id="@+id/textPremium3"
                    style="@style/TextLight12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/you_can_make_anim_avatar" />

                <TextView
                    android:id="@+id/helpPremium3"
                    style="@style/TextHelp10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/user_advertising_can_not_disable_or_delete"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/subPremium3"
                    style="@style/TextDark16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/btn_main_act"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/subscribe"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/premiumOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:background="@drawable/bg_colorinput_radius_4dp"
                android:orientation="vertical"
                android:padding="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@+id/premiumOption3">

                <TextView
                    android:id="@+id/titlePremium4"
                    style="@style/TextAccent18spBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous_comments_and_posts" />

                <TextView
                    android:id="@+id/textPremium4"
                    style="@style/TextLight12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/you_can_write_anonymous_comments" />

                <TextView
                    android:id="@+id/helpPremium4"
                    style="@style/TextHelp10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/user_can_still_add_to_black_list" />

                <Button
                    android:id="@+id/subPremium4"
                    style="@style/TextDark16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/btn_main_act"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/subscribe"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/premiumOption5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                android:background="@drawable/bg_colorinput_radius_4dp"
                android:orientation="vertical"
                android:padding="@dimen/big_padding"
                app:layout_constraintTop_toBottomOf="@+id/premiumOption4">

                <TextView
                    android:id="@+id/titlePremium5"
                    style="@style/TextAccent18spBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download_audio_and_video" />

                <TextView
                    android:id="@+id/textPremium5"
                    style="@style/TextLight12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/you_can_download_files" />

                <TextView
                    android:id="@+id/helpPremium5"
                    style="@style/TextHelp10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:text="@string/user_can_still_add_to_black_list"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/subPremium5"
                    style="@style/TextDark16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/btn_main_act"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/subscribe"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>