<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_auth"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_margin"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/intergroup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/middle_big_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/middle_high_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPrivacyPolicy"
                style="@style/ButtonAuthStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_big_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/privacy_police"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

            <CheckBox
                android:id="@+id/cbPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_check_box"
                android:fontFamily="@font/roboto"
                android:layoutDirection="rtl"
                android:paddingTop="@dimen/high_middle_padding"
                android:paddingBottom="@dimen/small_big_padding"
                android:text="@string/terms_accept_privacy"
                android:textColor="@color/manatee"
                android:textSize="@dimen/big_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPrivacyPolicy" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTermsOfUse"
                style="@style/ButtonAuthStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/terms_of_use"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbPP" />

            <CheckBox
                android:id="@+id/cbTOU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_check_box"
                android:fontFamily="@font/roboto"
                android:layoutDirection="rtl"
                android:paddingTop="@dimen/high_middle_padding"
                android:paddingBottom="@dimen/small_big_padding"
                android:text="@string/terms_accept_agreement"
                android:textColor="@color/manatee"
                android:textSize="@dimen/big_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnTermsOfUse" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRightholders"
                style="@style/ButtonAuthStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/rightholders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbTOU" />

            <CheckBox
                android:id="@+id/cbRH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_check_box"
                android:fontFamily="@font/roboto"
                android:layoutDirection="rtl"
                android:paddingTop="@dimen/high_middle_padding"
                android:paddingBottom="@dimen/small_big_padding"
                android:text="@string/terms_accept"
                android:textColor="@color/manatee"
                android:textSize="@dimen/big_size"
                app:layout_constraintBottom_toTopOf="@+id/tvIMEI"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRightholders"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIMEI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/hardware_access"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/big_size"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbRH" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginTop="@dimen/low_padding"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:background="@drawable/background_button_disable"
                    android:enabled="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/next"
                    android:textSize="@dimen/big_size" />

                <include layout="@layout/auth_loader" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
